--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,38 @@
 version: '3'
 services:
   web:
-    image: nginx
+    image: nginx:latest
     volumes:
-      - ./nginx/conf:/etc/nginx/conf.d
+      - ./nginx/conf/default.conf:/etc/nginx/conf.d/default.conf
       - ./:/var/www/html
     ports:
       - "80:80"
     restart: always
+    links:
+      - php
+
+  php:
+    build: php
+    restart: always
+    environment:
+      PHP_IDE_CONFIG: "serverName=Firebase"
+    volumes:
+      - ./php/php.ini:/usr/local/etc/php/conf.d/php.ini
+      - ./php/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
+      - .:/var/www/html
+
+  redis:
+    container_name: redis
+    image: redis:latest
+    restart: always
+    entrypoint: redis-server --appendonly yes --requirepass redis --maxmemory 512mb --maxmemory-policy allkeys-lru
+    networks:
+      - default
+    ports:
+      - "6379:6379"
+    volumes:
+      - pg_data:/data
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+volumes:
+  pg_data: { }
