--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "firebase": "^9.12.1"
   },
   "devDependencies": {
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
